[tool.poetry]
name = "openai-api-proxy"
version = "0.1.0"
description = "A proxy of OpenAI api"
authors = ["douglarek <douglarek@gmail.com>"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
tiktoken = "^0.3.2"
uvicorn = "^0.21.1"
httpx = "^0.23.3"
click = "^8.1.3"


[tool.poetry.scripts]
start = "server.main:start"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
pytest = "^7.2.2"
mypy = "^1.1.1"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
